--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,18 +4,18 @@
 @import './common/variables';
 
 @font-face {
-  font-family: Inter;
+  font-family: $font-secondary;
   font-weight: 300;
   src: url('../assets/fonts/Inter-ExtraLight-BETA.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Inter;
+  font-family: $font-secondary;
   src: url('../assets/fonts/Inter-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: Inter;
+  font-family: $font-secondary;
   font-weight: bold;
   src: url('../assets/fonts/Inter-Bold.ttf') format('truetype');
 }
