--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -55,12 +55,6 @@
     align-items: center;
     justify-content: center;
     gap: 16px;
-    @media (max-width: 768px) {
-      justify-content: flex-start;
-      max-width: 760px;
-      overflow: scroll;
-      scroll-behavior: smooth;
-    }
   }
 
   button {
@@ -72,6 +66,49 @@
     letter-spacing: .12px;
   }
   @media (max-width: 768px) {
+    // padding: 8px 16px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .navbarlist {
     padding: 8px 16px;
+    overflow: scroll;
+    scroll-behavior: smooth;
+
+    div {
+      justify-content: flex-start;
+      max-width: 100%;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .hidden_425 {
+    display: none;
+  }
+
+  .header {
+    padding: 12px 16px;
+
+    a {
+      padding: 12px;
+    }
+
+    button {
+      padding: 8px 16px;
+    }
+
+    .primary-button {
+      img {
+        width: 24px;
+      }
+    }
+  }
+}
+
+@media (max-width: 424px) {
+  .hidden_320 {
+    display: none;
   }
 }
