--- a/src/components/Landingpage/Traction/styles.scss
+++ b/src/components/Landingpage/Traction/styles.scss
@@ -1,34 +1,6 @@
 @import '../../../styles/main';
 
 .traction {
-  margin-top: 160px;
-  padding: 0 32px;
-
-  .title {
-    display: flex;
-    justify-content: space-between;
-
-    div {
-      font-family: $font-ibm-sans;
-      font-size: 42px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 48px; /* 114.286% */
-    }
-
-    button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 12px 20px;
-      color: white;
-      background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-      border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
-      border-radius: 2px;
-      gap: 8px;
-    }
-  }
-
   .first-title {
     /* Desktop / Heading / H400 */
     font-family: $font-ibm-sans;
@@ -179,5 +151,20 @@
 
   .h-100 {
     height: 100%;
+  }
+
+  @media (max-width: 1023px) {
+    .nft-token {
+      flex-direction: column;
+    }
+  }
+  @media (max-width: 767px) {
+    .metrics {
+      flex-direction: column;
+    }
+
+    .content-video-comment {
+      flex-direction: column;
+    }
   }
 }
