--- a/src/components/Landingpage/Community/style.scss
+++ b/src/components/Landingpage/Community/style.scss
@@ -1,8 +1,9 @@
 @import '../../../styles/main';
 
 .community {
-  margin-top: 160px;
-  padding: 0 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 
   .title {
     display: flex;
@@ -26,238 +27,227 @@
       border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
       border-radius: 2px;
       gap: 8px;
-    }
-  }
 
-  .council {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    width: 100%;
-    padding: 32px;
-    background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-    border: 1px solid #52616b;
-    border-radius: 8px;
+      &.show {
+        display: flex;
+      }
 
-    .council_des {
-      width: 450px;
-      overflow: hidden;
-
-      /* Desktop/Text/T200 Regular */
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 20px; /* 142.857% */
-      letter-spacing: .07px;
-      color: var(--text-default-default, #b5c1c9);
-      text-overflow: ellipsis;
-      font-feature-settings: 'clig' off, 'liga' off;
-    }
-
-    .view_council {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 12px 20px;
-      background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-      border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
-      border-radius: 2px;
-      gap: 8px;
-    }
-
-    .view_btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 12px 20px;
-      background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-      border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
-      border-radius: 2px;
-      gap: 8px;
-    }
-  }
-
-  .council_plan {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    padding: 32px;
-    background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-    border-radius: 8px;
-    gap: 16px;
-
-    .progress_bg {
-      width: 100%;
-      height: 20px;
-      background: var(--background-default-default-alpha, rgba(187, 217, 246, .13));
-      border-radius: 4px;
-    }
-
-    .progress_bar {
-      position: absolute;
-      width: 60%;
-      height: 20px;
-      background: var(--core-blue-200, #8890ff);
-      border-radius: 4px;
-    }
-
-    .plan_view_btn {
-      display: flex;
-      align-items: center;
-      align-self: stretch;
-      justify-content: center;
-      padding: 12px 20px;
-      background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-      border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
-      border-radius: 2px;
-      gap: 8px;
-    }
-  }
-
-  .info_style {
-    display: flex;
-    align-items: center;
-    padding: 4px 6px;
-    background: var(--background-default-strong-default, #272d33);
-    border-radius: 4px;
-    gap: 4px;
-  }
-
-  .card_info {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-
-    img {
-      z-index: 1;
-      margin-top: -70px;
-    }
-
-    .info_style {
-      display: flex;
-      align-items: center;
-      padding: 4px 6px;
-      background: var(--background-default-strong-default, #272d33);
-      border-radius: 4px;
-      gap: 4px;
-    }
-
-    div {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 0 32px;
-      gap: 8px;
-    }
-  }
-
-  .card {
-    background: var(--background-default-muted-default, #0f1114);
-    border-radius: 8px;
-
-    .overlay {
-      height: 155px;
-      background: var(--background-default-overlay, rgba(16, 18, 20, .75));
-
-      img {
-        width: 100%;
-        height: 100%;
-        opacity: 15%;
-        object-fit: cover;
+      &.hidden {
+        display: none;
       }
     }
   }
 
-  .groups_box {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    padding: 32px;
-    background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-    border: 1px solid #52616b;
-    border-radius: 8px;
-    gap: 16px;
-  }
-
-  .group_card {
+  .community-2 {
+    position: relative;
     display: flex;
     flex-direction: column;
-    width: 560px;
-    height: 400px;
-    background: #0f1114;
-    border: 1px solid var(--border-default-default-alpha, rgba(203, 224, 241, .27));
-    border-radius: 8px;
+    overflow: hidden;
+    gap: 12px;
 
-    .overlay {
-      height: 80px;
-      background: var(--background-default-overlay, rgba(16, 18, 20, .75));
-
-      img {
-        width: 100%;
-        height: 100%;
-        opacity: 15%;
-        object-fit: cover;
-      }
+    .box-section {
+      display: flex;
+      flex-direction: row;
+      overflow-x: hidden;
+      gap: 24px;
+      // overscroll-behavior-inline: auto;
     }
 
-    .storage_img {
+    .person-box {
       display: flex;
       align-items: center;
-      justify-content: center;
-      margin-top: -29px;
-    }
-
-    .group_info {
-      display: flex;
       flex-direction: column;
-      padding: 10px 32px 32px 32px;
-      gap: 16px;
+      justify-content: center;
+      width: 326px;
+      height: 276px;
+      padding: 32px;
+      text-align: center;
+      cursor: pointer;
+      background: var(--background-default-muted-default, #0f1114);
+      border-radius: 8px;
+      gap: 4px;
 
-      .avatar_img {
-        width: 24px;
-        height: 24px;
+      .img {
+        width: 120px;
+        height: 120px;
       }
+    }
+  }
 
-      .avatar {
+  .community-1 {
+    display: flex;
+    width: 100%;
+    gap: 24px;
+
+    .twitter-discord {
+      display: flex;
+      flex: 2;
+      gap: 24px;
+
+      .number {
         display: flex;
         align-items: center;
-        padding: 4px 8px;
-        background: var(--background-default-strong-default, #272d33);
-        border-radius: 4px;
-        gap: 6px;
+        flex-direction: column;
+        justify-content: center;
+        width: 50%;
+        padding: 32px;
+        border-radius: 8px;
+        gap: 4px;
+
+        &.twitter-back {
+          background: radial-gradient(299.34% 181.84% at 50% 50%, rgba(29, 161, 242) 0%, #1da1f2 100%);
+          border: 1px solid var(--border-default-default-alpha, rgba(203, 224, 241, .27));
+        }
+
+        &.discord-back {
+          background: radial-gradient(299.34% 181.84% at 50% 50%, rgba(114, 137, 218) 0%, #7289da 100%);
+          border: 1px solid var(--border-default-default-alpha, rgba(203, 224, 241, .27));
+        }
+
+        .img {
+          width: 40px;
+          height: 40px;
+        }
+      }
+    }
+
+    .other-number {
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      gap: 24px;
+
+      .box-1 {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        padding: 32px;
+        background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
+        border-radius: 8px;
+        gap: 4px;
+      }
+
+      .box-2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        padding: 32px;
+        background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
+        border-radius: 8px;
+        gap: 16px;
       }
     }
   }
 
-  .member_Card_Des {
-    width: 100%;
-    padding: 32px;
-    background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-    border: 1px solid #52616b;
-    border-radius: 8px;
+  .subtitle {
+    display: flex;
+    align-items: center;
   }
 
-  .member_Card {
-    padding: 32px;
-    background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
-    border-radius: 8px;
-  }
+  .community-3 {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    -ms-overflow-style: none;
+    scrollbar-width: thin;
 
-  .relative {
-    position: relative;
+    &::-webkit-scrollbar {
+      width: 0; /* Set a thin width for the scrollbar */
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: transparent; /* Hide the thumb */
+    }
+
+    .today-tomorrow {
+      display: flex;
+      gap: 24px;
+
+      .today {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+      }
+
+      .today-btn {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        padding: 16px 8px;
+        text-align: center;
+        background: var(--background-default-muted-default, #0f1114);
+        border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
+        border-radius: 8px;
+        gap: 8px;
+
+        .btn {
+          // font-family: Inter;
+          font-size: 21px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 32px; /* 152.381% */
+          color: var(--text-default-strong, #f4f6f8);
+          font-feature-settings: 'clig' off, 'liga' off;
+        }
+      }
+
+      .today-info {
+        display: flex;
+        flex-direction: column;
+        width: 443px;
+        background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
+        border-radius: 8px;
+
+        .today-img {
+          height: 177px;
+          border-radius: 8px;
+        }
+
+        .today-body {
+          display: flex;
+          flex-direction: column;
+          padding: 24px;
+          gap: 4px;
+        }
+      }
+
+      .tomorrow {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+
+        .tomorrow-btn {
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          justify-content: center;
+          padding: 16px 8px;
+          text-align: center;
+          background: var(--background-default-muted-default, #0f1114);
+          border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
+          border-radius: 8px;
+          gap: 8px;
+
+          .btn {
+            // font-family: Inter;
+            font-size: 21px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 32px; /* 152.381% */
+            color: var(--text-default-strong, #f4f6f8);
+            font-feature-settings: 'clig' off, 'liga' off;
+          }
+        }
+      }
+    }
   }
 
   hr {
     margin: 24px 0;
     border-bottom: 1px solid var(--border-default-default-alpha, rgba(203, 224, 241, .27));
-  }
-
-  .display-grid {
-    display: grid;
-    gap: 24px;
-    grid-template-columns: repeat(4, 1fr);
   }
 
   .flex-column {
@@ -268,40 +258,36 @@
     display: flex;
   }
 
-  .flex-wrap {
-    flex-wrap: wrap;
-  }
-
-  .fs-12 {
-    font-size: 12px;
+  .fs-55 {
+    font-size: 55px;
   }
 
   .fs-14 {
     font-size: 14px;
   }
 
-  .fs-16 {
-    font-size: 16px;
-  }
-
   .fs-21 {
     font-size: 21px;
+  }
+
+  .fs-18 {
+    font-size: 18px;
+  }
+
+  .fs-16 {
+    font-size: 16px;
   }
 
   .fs-24 {
     font-size: 24px;
   }
 
-  .fs-32 {
-    font-size: 32px;
-  }
-
   .fs-42 {
     font-size: 42px;
   }
 
-  .fs-55 {
-    font-size: 55px;
+  .fs-73 {
+    font-size: 73px;
   }
 
   .fw-600 {
@@ -312,10 +298,6 @@
     font-weight: 400;
   }
 
-  .fw-500 {
-    font-weight: 500;
-  }
-
   .fc-F4F6F8 {
     color: var(--text-default-strong, #f4f6f8);
   }
@@ -324,12 +306,16 @@
     color: var(--text-default-default, #b5c1c9);
   }
 
+  .fc-6C6CFF {
+    color: var(--accent-300, #6c6cff);
+  }
+
   .fc-FFF {
     color: var(--solid-white, #fff);
   }
 
-  .fc-6C6CFF {
-    color: var(--accent-300, #6c6cff);
+  .fc-7B8A95 {
+    color: var(--text-default-muted, #7b8a95);
   }
 
   .mt-8 {
@@ -344,26 +330,14 @@
     margin-top: 28px;
   }
 
-  .mb-8 {
-    margin-bottom: 8px;
-  }
-
   .px-0 {
     padding-right: 0;
     padding-left: 0;
   }
 
-  .px-12 {
-    padding: 12px 0;
-  }
-
   .px-32 {
     padding-right: 32px;
     padding-left: 32px;
-  }
-
-  .py-20 {
-    padding: 0 20px;
   }
 
   .p-32 {
@@ -378,28 +352,16 @@
     flex: 2;
   }
 
-  .gap-4 {
-    gap: 4px;
-  }
-
   .gap-8 {
     gap: 8px;
-  }
-
-  .gap-12 {
-    gap: 12px;
-  }
-
-  .gap-16 {
-    gap: 16px;
   }
 
   .gap-24 {
     gap: 24px;
   }
 
-  .gap-40 {
-    gap: 40px;
+  .gap-28 {
+    gap: 28px;
   }
 
   .gap-80 {
@@ -410,32 +372,8 @@
     width: 100%;
   }
 
-  .w-80 {
-    width: 80%;
-  }
-
-  .w-60 {
-    width: 60%;
-  }
-
-  .w-70 {
-    width: 70%;
-  }
-
-  .w-40 {
-    width: 40%;
-  }
-
-  .h-100 {
-    height: 100%;
-  }
-
   .justify-between {
     justify-content: space-between;
-  }
-
-  .justify-center {
-    justify-content: center;
   }
 
   .justify-end {
@@ -446,11 +384,215 @@
     align-items: center;
   }
 
-  .item-end {
-    align-items: end;
+  .rotate-90 {
+    transform: rotate(-90deg);
   }
 
-  .text-center {
-    text-align: center;
+  @media screen and (max-width: 1920px) {
+    .community-3 {
+      overflow: scroll;
+
+      .tomorrow {
+        width: 1240px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .community-1 {
+      flex-direction: column;
+
+      .twitter-discord {
+        width: 100%;
+        gap: 16px;
+
+        .number {
+          height: 400px;
+        }
+      }
+
+      .other-number {
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(3, 1fr);
+
+        .box-1 {
+          height: 260px;
+        }
+
+        .box-2 {
+          height: 260px;
+        }
+      }
+    }
+
+    .community-2 {
+      max-width: 900px;
+    }
+
+    .community-3 {
+      max-width: 890px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 0;
+
+    .title {
+      button {
+        &.show {
+          display: none;
+        }
+
+        &.hidden {
+          display: flex;
+        }
+      }
+    }
+
+    .community-1 {
+      .twitter-discord {
+        .number {
+          .fs-73 {
+            font-size: 55px;
+          }
+        }
+      }
+
+      .other-number {
+        gap: 16px;
+
+        .box-1 {
+          padding: 16px;
+        }
+
+        .box-2 {
+          padding: 16px;
+        }
+
+        .fs-42 {
+          font-size: 32px;
+        }
+
+        .fw-600 {
+          font-weight: 400;
+        }
+
+        .fs-55 {
+          font-size: 42px;
+        }
+      }
+    }
+
+    .community-2 {
+      max-width: 730px;
+    }
+
+    .community-3 {
+      max-width: 735px;
+
+      .today {
+        .today-info {
+          width: 360px;
+        }
+      }
+
+      .tomorrow {
+        .today-info {
+          width: 360px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 425px) {
+    .title {
+      div {
+        font-size: 32px;
+      }
+    }
+
+    .community-1 {
+      .twitter-discord {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 16px;
+
+        .number {
+          width: 100%;
+
+          .fs-73 {
+            font-size: 55px;
+          }
+        }
+      }
+
+      .other-number {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        .box-1 {
+          height: auto;
+          padding: 16px;
+          gap: 16px;
+        }
+
+        .fs-42 {
+          font-size: 32px;
+        }
+
+        .box-2 {
+          height: auto;
+          padding: 16px;
+          gap: 16px;
+        }
+      }
+    }
+
+    .community-2 {
+      max-width: 390px;
+    }
+
+    .community-3 {
+      max-width: 390px;
+
+      .today {
+        .today-info {
+          width: 270px;
+
+          .fs-24 {
+            font-size: 18px;
+          }
+        }
+      }
+
+      .tomorrow {
+        .today-info {
+          width: 270px;
+
+          .fs-24 {
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .title {
+      div {
+        font-size: 24px;
+      }
+    }
+
+    .community-2 {
+      max-width: 280px;
+    }
+
+    .community-3 {
+      max-width: 270px;
+    }
   }
 }
