--- a/src/components/Landingpage/History/style.scss
+++ b/src/components/Landingpage/History/style.scss
@@ -1,12 +1,9 @@
 @import '../../../styles/main';
 
 .history {
-  padding: 0 32px;
-
-  hr {
-    margin: 24px 0;
-    border-bottom: 1px solid var(--border-default-default-alpha, rgba(203, 224, 241, .27));
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 
   .title {
     display: flex;
@@ -30,7 +27,20 @@
       border: 1px solid var(--border-default-muted-alpha, rgba(187, 217, 246, .13));
       border-radius: 2px;
       gap: 8px;
+
+      &.show {
+        display: flex;
+      }
+
+      &.hidden {
+        display: none;
+      }
     }
+  }
+
+  .history-carousel {
+    width: 100%;
+    overflow: hidden;
   }
 
   .history-info {
@@ -110,6 +120,42 @@
           color: var(--accent-300, #6c6cff);
           transform: rotate(-90deg);
         }
+      }
+    }
+  }
+  @media screen and (max-width: 1024px) {
+    width: 960px;
+  }
+  @media screen and (max-width: 768px) {
+    width: 733px;
+
+    .title {
+      button {
+        &.show {
+          display: none;
+        }
+
+        &.hidden {
+          display: flex;
+        }
+      }
+    }
+  }
+  @media screen and (max-width: 425px) {
+    width: 392px;
+
+    .title {
+      div {
+        font-size: 32px;
+      }
+    }
+  }
+  @media screen and (max-width: 320px) {
+    width: 285px;
+
+    .title {
+      div {
+        font-size: 24px;
       }
     }
   }
