--- a/src/components/Landingpage/Token/style.scss
+++ b/src/components/Landingpage/Token/style.scss
@@ -48,6 +48,11 @@
     display: flex;
     gap: 24px;
 
+    .widget {
+      flex: 2;
+      flex-direction: column;
+    }
+
     .info {
       display: flex;
       flex: 1;
