--- a/src/components/Landingpage/Token/style.scss
+++ b/src/components/Landingpage/Token/style.scss
@@ -8,6 +8,7 @@
   .itemCard {
     display: flex;
     align-items: flex-start;
+    flex: 1;
     flex-direction: column;
     padding: 32px;
     background: var(--background-default-muted-alpha, rgba(188, 213, 250, .08));
@@ -44,13 +45,69 @@
     }
   }
 
+  .staking {
+    .value {
+      /* Desktop / Heading / H800 */
+      font-family: $font-ibm-sans;
+      font-size: 55px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 64px; /* 116.364% */
+      letter-spacing: -.275px;
+      color: var(--solid-white, #fff);
+      text-align: center;
+      font-feature-settings: 'clig' off, 'liga' off;
+    }
+  }
+
   .price_section {
     display: flex;
+    flex-wrap: wrap;
     gap: 24px;
 
     .widget {
       flex: 2;
       flex-direction: column;
+
+      .title {
+        display: flex;
+        align-items: center;
+      }
+
+      .value {
+        /* Desktop / Heading / H800 */
+        // font-family: IBM Plex Sans;
+        font-size: 55px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 64px; /* 116.364% */
+        letter-spacing: -.275px;
+        color: var(--solid-white, #fff);
+        text-align: center;
+        text-align: left;
+        font-feature-settings: 'clig' off, 'liga' off;
+        @media (max-width: 768px) {
+          font-size: 42px;
+        }
+        @media (max-width: 425px) {
+          font-size: 32px;
+        }
+      }
+
+      .percent {
+        /* Desktop/Text/T400 Regular */
+        // font-family: Inter;
+        font-size: 21px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 32px; /* 152.381% */
+        color: var(--text-default-default, #b5c1c9);
+        text-align: left;
+        font-feature-settings: 'clig' off, 'liga' off;
+        @media (max-width: 320px) {
+          font-size: 16px;
+        }
+      }
     }
 
     .info {
@@ -125,8 +182,12 @@
   }
 
   .table {
+    // width: 100%;
+    // min-width: 670px;
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    min-width: 670px;
+    padding-left: 32px;
 
     .tr,
     .td {
@@ -167,11 +228,6 @@
         /* Divider/Bottom */
       }
     }
-  }
-
-  .table-div {
-    width: 100%;
-    max-width: calc((100vw - 64px) / 2);
   }
 
   .buy_and_sell {
@@ -261,21 +317,6 @@
     }
   }
 
-  .staking {
-    .value {
-      /* Desktop / Heading / H800 */
-      font-family: $font-ibm-sans;
-      font-size: 55px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 64px; /* 116.364% */
-      letter-spacing: -.275px;
-      color: var(--solid-white, #fff);
-      text-align: center;
-      font-feature-settings: 'clig' off, 'liga' off;
-    }
-  }
-
   .mt-8 {
     margin-top: 8px;
   }
@@ -304,6 +345,10 @@
 
   .flex-2 {
     flex: 2;
+  }
+
+  .gap-16 {
+    gap: 16px;
   }
 
   .gap-24 {
@@ -383,47 +428,47 @@
     gap: 16px;
   }
 
-  .widget {
-    flex: 2;
-    flex-direction: column;
-    padding: 16px !important;
+  // .widget {
+  //   // flex: 2;
+  //   flex-direction: column;
+  //   // padding: 16px !important;
 
-    .title {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
+  //   .title {
+  //     display: flex;
+  //     align-items: center;
+  //     // justify-content: flex-start;
 
-      /* Desktop / Heading / H400 */
-      font-family: $font-ibm-sans;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 24px; /* 133.333% */
-      letter-spacing: .09px;
-      color: var(--text-default-strong, #f4f6f8);
-      font-feature-settings: 'clig' off, 'liga' off;
-    }
+  //     /* Desktop / Heading / H400 */
+  //     font-family: $font-ibm-sans;
+  //     font-size: 18px;
+  //     font-style: normal;
+  //     font-weight: 600;
+  //     line-height: 24px; /* 133.333% */
+  //     letter-spacing: .09px;
+  //     color: var(--text-default-strong, #f4f6f8);
+  //     font-feature-settings: 'clig' off, 'liga' off;
+  //   }
 
-    .value {
-      /* Desktop / Heading / H600 */
-      font-family: $font-ibm-sans;
-      font-size: 32px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 40px; /* 125% */
-      color: var(--solid-white, #fff);
-      font-feature-settings: 'clig' off, 'liga' off;
-    }
+  //   .value {
+  //     /* Desktop / Heading / H600 */
+  //     font-family: $font-ibm-sans;
+  //     font-size: 32px;
+  //     font-style: normal;
+  //     font-weight: 600;
+  //     line-height: 40px; /* 125% */
+  //     color: var(--solid-white, #fff);
+  //     font-feature-settings: 'clig' off, 'liga' off;
+  //   }
 
-    .percent {
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 24px; /* 150% */
-      color: var(--text-default-default, #b5c1c9);
-      font-feature-settings: 'clig' off, 'liga' off;
-    }
-  }
+  //   .percent {
+  //     font-size: 16px;
+  //     font-style: normal;
+  //     font-weight: 400;
+  //     line-height: 24px; /* 150% */
+  //     color: var(--text-default-default, #b5c1c9);
+  //     font-feature-settings: 'clig' off, 'liga' off;
+  //   }
+  // }
 
   .token .itemCard .value {
     font-size: 24px;
