Update Twitter to X (in Footer, Community page and Verification pages)

--- a/src/components/verification-page/style.scss
+++ b/src/components/verification-page/style.scss
@@ -110,7 +110,7 @@
       place-items: center;
 
       &--twitter {
-        fill: #1da1f2;
+        fill: $c_white;
       }
 
       &--discord {
