--- a/src/components/index-page/Payouts/style.scss
+++ b/src/components/index-page/Payouts/style.scss
@@ -124,6 +124,10 @@
           visibility: hidden;
           transition: visibility .3s linear, opacity .3s linear;
           transition-delay: .1s;
+
+          & > a {
+            color: #6c6cff;
+          }
         }
 
         &__label {
